--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ Flask==2.1.2
 Flask-Compress==1.12
 future==0.16.0
 greenlet==1.1.2
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.1.2
 jieba==0.42.1
