--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.3
 cryptography==37.0.3
+cycler==0.11.0
 dash==2.5.1
 dash-core-components==2.0.0
 dash-daq==0.5.0
@@ -27,6 +28,7 @@ docopt==0.6.2
 filelock==3.7.1
 Flask==2.1.2
 Flask-Compress==1.12
+fonttools==4.33.3
 future==0.16.0
 greenlet==1.1.2
 gunicorn==20.1.0
@@ -36,25 +38,33 @@ jieba==0.42.1
 Jinja2==3.1.2
 jmespath==0.10.0
 jsonschema==3.2.0
+kiwisolver==1.4.3
 MarkupSafe==2.1.1
+matplotlib==3.5.2
 numpy==1.22.4
+packaging==21.3
 pandas==1.4.2
 paramiko==2.11.0
 pathspec==0.9.0
+patsy==0.5.2
+Pillow==9.1.1
 platformdirs==2.5.2
 plotly==5.8.2
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyNaCl==1.5.0
+pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==5.4.1
 requests==2.26.0
+scipy==1.8.1
 semantic-version==2.8.5
 six==1.14.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.37
+statsmodels==0.13.2
 tenacity==8.0.1
 termcolor==1.1.0
 texttable==1.6.4
@@ -64,5 +74,6 @@ wcwidth==0.1.9
 websocket-client==0.59.0
 Werkzeug==2.1.2
 wikipedia==1.4.0
+wordcloud==1.8.1
 xlrd==2.0.1
 xlwt==1.3.0
